--- a/debian/control
+++ b/debian/control
@@ -139,8 +139,8 @@ Architecture: amd64 arm64 armel armhf hppa i386 m68k mips mipsel mipsn32 mipsn32
 Section: libs
 Priority: optional
 Multi-Arch: same
-Depends: ${shlibs:Depends}, ${libgcc:Depends}, ${libcrypt:Depends}, ${libnss-nis:Depends}, ${libnss-nisplus:Depends}
-Recommends: libidn2-0 (>= 2.0.5~)
+Depends: ${shlibs:Depends}, ${libgcc:Depends}, ${libcrypt:Depends}
+Recommends: libidn2-0 (>= 2.0.5~), libnss-nis, libnss-nisplus
 Suggests: glibc-doc, debconf | debconf-2.0, libc-l10n, locales [!hurd-i386]
 Provides: libc6-sparcv9b [sparc sparc64], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-i386], libc6-i686 [i386]
 Conflicts: libc0.1-i686 [kfreebsd-i386], libc6-i686 [i386]
@@ -214,8 +214,8 @@ Architecture: alpha ia64
 Section: libs
 Priority: optional
 Multi-Arch: same
-Depends: ${shlibs:Depends}, ${libgcc:Depends}, ${libcrypt:Depends}, ${libnss-nis:Depends}, ${libnss-nisplus:Depends}
-Recommends: libidn2-0 (>= 2.0.5~)
+Depends: ${shlibs:Depends}, ${libgcc:Depends}, ${libcrypt:Depends}
+Recommends: libidn2-0 (>= 2.0.5~), libnss-nis, libnss-nisplus
 Suggests: glibc-doc, debconf | debconf-2.0, libc-l10n, locales [!hurd-i386]
 Provides: libc6-sparcv9b [sparc sparc64], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-i386], libc6-i686 [i386]
 Conflicts: libc0.1-i686 [kfreebsd-i386], libc6-i686 [i386]
@@ -289,8 +289,8 @@ Architecture: hurd-i386
 Section: libs
 Priority: optional
 Multi-Arch: same
-Depends: ${shlibs:Depends}, ${libgcc:Depends}, ${libcrypt:Depends}, ${libnss-nis:Depends}, ${libnss-nisplus:Depends}
-Recommends: libidn2-0 (>= 2.0.5~)
+Depends: ${shlibs:Depends}, ${libgcc:Depends}, ${libcrypt:Depends}
+Recommends: libidn2-0 (>= 2.0.5~), libnss-nis, libnss-nisplus
 Suggests: glibc-doc, debconf | debconf-2.0, libc-l10n, locales [!hurd-i386]
 Provides: libc6-sparcv9b [sparc sparc64], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-i386], libc6-i686 [i386]
 Conflicts: libc0.1-i686 [kfreebsd-i386], libc6-i686 [i386]
@@ -364,8 +364,8 @@ Architecture: kfreebsd-amd64 kfreebsd-i386
 Section: libs
 Priority: optional
 Multi-Arch: same
-Depends: ${shlibs:Depends}, ${libgcc:Depends}, ${libcrypt:Depends}, ${libnss-nis:Depends}, ${libnss-nisplus:Depends}
-Recommends: libidn2-0 (>= 2.0.5~)
+Depends: ${shlibs:Depends}, ${libgcc:Depends}, ${libcrypt:Depends}
+Recommends: libidn2-0 (>= 2.0.5~), libnss-nis, libnss-nisplus
 Suggests: glibc-doc, debconf | debconf-2.0, libc-l10n, locales [!hurd-i386]
 Provides: libc6-sparcv9b [sparc sparc64], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-i386], libc6-i686 [i386]
 Conflicts: libc0.1-i686 [kfreebsd-i386], libc6-i686 [i386]
