--- a/debian/control
+++ b/debian/control
@@ -222,7 +222,7 @@ Architecture: amd64 arc arm64 armel armhf hppa i386 m68k mips mipsel mipsn32 mip
 Section: debian-installer
 Priority: optional
 Provides: libc6, libc-udeb, libnss-dns-udeb, libnss-files-udeb
-Build-Profiles: <!stage1>
+Build-Profiles: <!noudeb !stage1>
 Description: GNU C Library: Shared libraries - udeb
  Contains the standard libraries that are used by nearly all programs on
  the system. This package includes shared versions of the standard C library
@@ -296,7 +296,7 @@ Architecture: alpha ia64
 Section: debian-installer
 Priority: optional
 Provides: libc6.1, libc-udeb, libnss-dns-udeb, libnss-files-udeb
-Build-Profiles: <!stage1>
+Build-Profiles: <!noudeb !stage1>
 Description: GNU C Library: Shared libraries - udeb
  Contains the standard libraries that are used by nearly all programs on
  the system. This package includes shared versions of the standard C library
@@ -370,7 +370,7 @@ Architecture: hurd-i386
 Section: debian-installer
 Priority: optional
 Provides: libc0.3, libc-udeb, libnss-dns-udeb, libnss-files-udeb
-Build-Profiles: <!stage1>
+Build-Profiles: <!noudeb !stage1>
 Description: GNU C Library: Shared libraries - udeb
  Contains the standard libraries that are used by nearly all programs on
  the system. This package includes shared versions of the standard C library
@@ -444,7 +444,7 @@ Architecture: kfreebsd-amd64 kfreebsd-i386
 Section: debian-installer
 Priority: optional
 Provides: libc0.1, libc-udeb, libnss-dns-udeb, libnss-files-udeb
-Build-Profiles: <!stage1>
+Build-Profiles: <!noudeb !stage1>
 Description: GNU C Library: Shared libraries - udeb
  Contains the standard libraries that are used by nearly all programs on
  the system. This package includes shared versions of the standard C library
